--- a/app/src/main/res/drawable/button_ok_shape.xml
+++ b/app/src/main/res/drawable/button_ok_shape.xml
@@ -3,7 +3,9 @@
     android:shape="rectangle">
     <gradient
         android:angle="360"
-        android:centerColor="#5aa0d6"
-        android:endColor="#51a3e2"
-        android:startColor="#70a3ca" />
+        android:centerColor="#b4a940"
+        android:endColor="#b6a829"
+        android:startColor="#aca348" />
+    <corners android:radius="3dip" />
+
 </shape>
