--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.icmob.clashroyalerandomcards.MainActivity">
+    tools:context="br.icmob.clashroyalerandomcards.view.MainActivity">
 
 
     <include layout="@layout/content_main"></include>
