--- a/app/src/main/res/layout/average_cost_layout.xml
+++ b/app/src/main/res/layout/average_cost_layout.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@drawable/average_cost_shape"
+        android:background="@drawable/title_shape"
         android:gravity="center">
 
         <TextView
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:text="Average elixir cost:"
-            android:textColor="#ef0bbb"
+            android:textColor="@color/elixir_info"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -26,7 +26,7 @@
             android:layout_marginLeft="5dp"
             android:fontFamily="sans-serif-condensed"
             android:text="0.0"
-            android:textColor="#ef0bbb"
+            android:textColor="@color/elixir_info"
             android:textSize="16sp"
             android:textStyle="bold" />
 
