--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/average_cost_shape"
+        android:background="@drawable/title_shape"
         android:padding="10dp">
 
         <ImageView
@@ -18,21 +18,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/ic_ok" />
+            android:src="@drawable/ic_ok_1" />
 
         <ImageView
             android:id="@+id/iv_block"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/ic_block" />
+            android:src="@drawable/ic_block_1" />
 
         <ImageView
             android:id="@+id/iv_refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/ic_refresh" />
+            android:src="@drawable/ic_refresh_1" />
 
 
     </LinearLayout>
