--- a/app/src/main/res/layout/filter_layout.xml
+++ b/app/src/main/res/layout/filter_layout.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/average_cost_shape"
+        android:background="@drawable/title_shape"
         android:gravity="center"
         android:padding="10dp">
 
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/average_cost_shape"
+        android:background="@drawable/title_shape"
         android:layout_margin="10dp"
         android:gravity="center"
         android:padding="10dp">
@@ -84,6 +84,33 @@
 
         </GridView>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <Button
+            android:id="@+id/btn_ok"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_ok_shape"
+            android:text="@string/ok"
+            android:textColor="#f3f3f3"
+            android:layout_margin="5dp"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_cancel_shape"
+            android:text="Cancelar"
+            android:textColor="#f3f3f3"
+            android:layout_margin="5dp"
+            android:layout_weight="1" />
     </LinearLayout>
 
 </LinearLayout>
